Change HTML structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <title>Rock Paper Scissors!</title>
     <script src = "script.js"></script>
 </head>
-<body style = "background-color: black;">
-    
+<body>
+    <div class = "scores">
+        <div class = "computer-score">
+            Computer Score:
+        </div>
+        <div class = "human-score">
+            Human Score:
+        </div>
+    </div>
+    <div class = "buttons">
+        <button id = "rock">
+            Rock
+        </button>
+        <button id = "paper">
+            Paper
+        </button>
+        <button id = "scissors">
+            Scissors
+        </button>
+    </div>
+    <div class = "result">
+        
+    </div>
 </body>
 </html>
