--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors!</title>
-    <script src = "script.js"></script>
+    <script defer src = "script.js"></script>
 </head>
 <body>
     <div class = "scores">
         <div class = "computer-score">
-            Computer Score:
+            Computer Score: 0
         </div>
         <div class = "human-score">
-            Human Score:
+            Human Score: 0
         </div>
     </div>
     <div class = "buttons">
@@ -27,7 +27,7 @@
         </button>
     </div>
     <div class = "result">
-        
+
     </div>
 </body>
 </html>
